part2/confs/yamls/app1/app1-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app1-service
  namespace: kube-system
spec:
  selector:
    app: app1
  ports:
    - protocol: TCP
      port: 80
